--- a/Labs/CryptoAlgorithms/CryptoAlgorithms.csproj
+++ b/Labs/CryptoAlgorithms/CryptoAlgorithms.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\AES.cs" />
+    <Compile Include="Algorithms\SHA1.cs" />
     <Compile Include="Helpers\FileOperations.cs" />
     <Compile Include="Helpers\Generator.cs" />
     <Compile Include="MainWindow.cs">
