--- a/Labs/CryptoAlgorithms/CryptoAlgorithms.csproj
+++ b/Labs/CryptoAlgorithms/CryptoAlgorithms.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Algorithms\AES.cs" />
     <Compile Include="Algorithms\RSA.cs" />
     <Compile Include="Algorithms\SHA1.cs" />
+    <Compile Include="DigitalEnvelope.cs" />
     <Compile Include="Helpers\FileOperations.cs" />
     <Compile Include="Helpers\Generator.cs" />
     <Compile Include="MainWindow.cs">
