--- a/Labs/CryptoAlgorithms/CryptoAlgorithms.csproj
+++ b/Labs/CryptoAlgorithms/CryptoAlgorithms.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Helpers\Converter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignedEnvelope.cs" />
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
